--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gorjeta",
   "version": "0.1.0",
+  "homepage": "https://studiowp.com.br/calcula-sinal/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
